@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,15 +19,12 @@ package io.spring.start.site.extension.dependency.testcontainers;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import io.spring.initializr.generator.buildsystem.Build;
 import io.spring.initializr.generator.buildsystem.Dependency;
 import io.spring.initializr.generator.buildsystem.DependencyScope;
 import io.spring.initializr.generator.spring.documentation.HelpDocument;
 import io.spring.initializr.generator.version.Version;
-import io.spring.initializr.generator.version.VersionParser;
-import io.spring.initializr.generator.version.VersionRange;
 import io.spring.start.site.support.implicit.ImplicitDependency;
 import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
 
@@ -40,11 +37,13 @@ import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
  */
 abstract class TestcontainersModuleRegistry {
 
-	private static final VersionRange SPRING_BOOT_3_2_0_OR_LATER = VersionParser.DEFAULT.parseRange("3.2.0");
-
 	static Iterable<ImplicitDependency> create(Version platformVersion) {
 		List<ImplicitDependency.Builder> builders = new ArrayList<>();
-		builders.add(onDependencies("amqp").customizeBuild(addModule("rabbitmq"))
+		builders.add(onDependencies("activemq").customizeBuild(addModule("activemq"))
+			.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
+		builders.add(onDependencies("artemis").customizeBuild(addModule("activemq"))
+			.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
+		builders.add(onDependencies("amqp", "amqp-streams").customizeBuild(addModule("rabbitmq"))
 			.customizeHelpDocument(addReferenceLink("RabbitMQ Module", "rabbitmq/")));
 		builders.add(onDependencies("cloud-gcp", "cloud-gcp-pubsub").customizeBuild(addModule("gcloud"))
 			.customizeHelpDocument(addReferenceLink("GCloud Module", "gcloud/")));
@@ -52,15 +51,18 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("Consul Module", "consul/")));
 		builders.add(onDependencies("cloud-starter-vault-config").customizeBuild(addModule("vault"))
 			.customizeHelpDocument(addReferenceLink("Vault Module", "vault/")));
-		builders.add(onDependencies("data-cassandra", "data-cassandra-reactive").customizeBuild(addModule("cassandra"))
+		builders.add(onDependencies("data-cassandra", "data-cassandra-reactive", "spring-ai-vectordb-cassandra")
+			.customizeBuild(addModule("cassandra"))
 			.customizeHelpDocument(addReferenceLink("Cassandra Module", "databases/cassandra/")));
 		builders.add(onDependencies("data-couchbase", "data-couchbase-reactive").customizeBuild(addModule("couchbase"))
 			.customizeHelpDocument(addReferenceLink("Couchbase Module", "databases/couchbase/")));
-		builders.add(onDependencies("data-elasticsearch").customizeBuild(addModule("elasticsearch"))
+		builders.add(onDependencies("data-elasticsearch", "spring-ai-vectordb-elasticsearch")
+			.customizeBuild(addModule("elasticsearch"))
 			.customizeHelpDocument(addReferenceLink("Elasticsearch Container", "elasticsearch/")));
-		builders.add(onDependencies("data-mongodb", "data-mongodb-reactive").customizeBuild(addModule("mongodb"))
+		builders.add(onDependencies("data-mongodb", "data-mongodb-reactive", "spring-ai-vectordb-mongodb-atlas")
+			.customizeBuild(addModule("mongodb"))
 			.customizeHelpDocument(addReferenceLink("MongoDB Module", "databases/mongodb/")));
-		builders.add(onDependencies("data-neo4j").customizeBuild(addModule("neo4j"))
+		builders.add(onDependencies("data-neo4j", "spring-ai-vectordb-neo4j").customizeBuild(addModule("neo4j"))
 			.customizeHelpDocument(addReferenceLink("Neo4j Module", "databases/neo4j/")));
 		builders.add(onDependencies("data-r2dbc").customizeBuild(addModule("r2dbc"))
 			.customizeHelpDocument(addReferenceLink("R2DBC support", "databases/r2dbc/")));
@@ -72,15 +74,9 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("MariaDB Module", "databases/mariadb/")));
 		builders.add(onDependencies("mysql").customizeBuild(addModule("mysql"))
 			.customizeHelpDocument(addReferenceLink("MySQL Module", "databases/mysql/")));
-		if (SPRING_BOOT_3_2_0_OR_LATER.match(platformVersion)) {
-			builders.add(onDependencies("oracle").customizeBuild(addModule("oracle-free"))
-				.customizeHelpDocument(addReferenceLink("Oracle-Free Module", "databases/oraclefree/")));
-		}
-		else {
-			builders.add(onDependencies("oracle").customizeBuild(addModule("oracle-xe"))
-				.customizeHelpDocument(addReferenceLink("Oracle-XE Module", "databases/oraclexe/")));
-		}
-		builders.add(onDependencies("postgresql").customizeBuild(addModule("postgresql"))
+		builders.add(onDependencies("oracle", "spring-ai-vectordb-oracle").customizeBuild(addModule("oracle-free"))
+			.customizeHelpDocument(addReferenceLink("Oracle-Free Module", "databases/oraclefree/")));
+		builders.add(onDependencies("postgresql", "spring-ai-vectordb-pgvector").customizeBuild(addModule("postgresql"))
 			.customizeHelpDocument(addReferenceLink("Postgres Module", "databases/postgres/")));
 		builders.add(onDependencies("pulsar", "pulsar-reactive").customizeBuild(addModule("pulsar"))
 			.customizeHelpDocument(addReferenceLink("Pulsar Module", "pulsar/")));
@@ -88,7 +84,17 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("Solace Module", "solace/")));
 		builders.add(onDependencies("sqlserver").customizeBuild(addModule("mssqlserver"))
 			.customizeHelpDocument(addReferenceLink("MS SQL Server Module", "databases/mssqlserver/")));
-		return builders.stream().map(Builder::build).collect(Collectors.toList());
+		builders.add(onDependencies("spring-ai-vectordb-chroma").customizeBuild(addModule("chromadb"))
+			.customizeHelpDocument(addReferenceLink("Chroma Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-milvus").customizeBuild(addModule("milvus"))
+			.customizeHelpDocument(addReferenceLink("Milvus Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-ollama").customizeBuild(addModule("ollama"))
+			.customizeHelpDocument(addReferenceLink("Ollama Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-qdrant").customizeBuild(addModule("qdrant"))
+			.customizeHelpDocument(addReferenceLink("Qdrant Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-weaviate").customizeBuild(addModule("weaviate"))
+			.customizeHelpDocument(addReferenceLink("Weaviate Module", "testcontainers/")));
+		return builders.stream().map(Builder::build).toList();
 	}
 
 	private static ImplicitDependency.Builder onDependencies(String... dependencyIds) {
